# ir-experiment

./: .gitignore  README.md  config.py  pyproject.toml  run_experiment.py
src/: data_loader.py  evaluation.py  preprocessing.py
src/retrievers/: dense.py  hybrid.py  reranker.py  sparse.py
